update: style - change to use spring-javaformat config and style