@@ -30,103 +30,92 @@ import org.springframework.stereotype.Service;
 @Service
 public class ProductOptionServiceImpl implements IProductOptionService {
 
-  private static final Logger LOG = LoggerFactory.getLogger(ProductOptionServiceImpl.class);
-  private final IProductOptionRepository iProductOptionRepository;
+	private static final Logger LOG = LoggerFactory.getLogger(ProductOptionServiceImpl.class);
 
-  @Autowired
-  public ProductOptionServiceImpl(IProductOptionRepository iProductOptionRepository) {
-    this.iProductOptionRepository = iProductOptionRepository;
-  }
+	private final IProductOptionRepository iProductOptionRepository;
 
-  @Override
-  public ResponseEntity<ResVm> createNewProductOption(
-      ProductOptionCreateReqVm productOptionCreateReqVm) {
-    ProductOption productOption = productOptionCreateReqVm.toModel();
-    String createBy = SecurityContextHolder.getContext().getAuthentication().getName();
+	@Autowired
+	public ProductOptionServiceImpl(IProductOptionRepository iProductOptionRepository) {
+		this.iProductOptionRepository = iProductOptionRepository;
+	}
 
-    if (this.iProductOptionRepository.existsByNameAndCreateBy(productOption.getName(), createBy)) {
-      throw new BadRequestException(
-          "Product Option with name " + productOption.getName() + " already exists!");
-    }
+	@Override
+	public ResponseEntity<ResVm> createNewProductOption(ProductOptionCreateReqVm productOptionCreateReqVm) {
+		ProductOption productOption = productOptionCreateReqVm.toModel();
+		String createBy = SecurityContextHolder.getContext().getAuthentication().getName();
 
-    ProductOption newProductOption = this.iProductOptionRepository.save(productOption);
-    ResVm resVm =
-        new ResVm(
-            HttpStatus.CREATED, "Create new option successfully - id: " + newProductOption.getId());
-    LOG.info(resVm.getLogMessage());
-    return ResponseEntity.status(201).body(resVm);
-  }
+		if (this.iProductOptionRepository.existsByNameAndCreateBy(productOption.getName(), createBy)) {
+			throw new BadRequestException("Product Option with name " + productOption.getName() + " already exists!");
+		}
 
-  @Override
-  public ResponseEntity<PagingResVm<ProductOptionResVm>> getAllOption(int page) {
-    LOG.info("Receive request to get all option");
-    String creator = SecurityContextHolder.getContext().getAuthentication().getName();
-    Pageable pageable =
-        PageRequest.of(page - 1, Constant.NUM_PER_CALL, Sort.by(Direction.DESC, "lastUpdate"));
-    Page<ProductOption> productOptionPage =
-        this.iProductOptionRepository.findByCreatorWithPagination(creator, pageable);
+		ProductOption newProductOption = this.iProductOptionRepository.save(productOption);
+		ResVm resVm = new ResVm(HttpStatus.CREATED, "Create new option successfully - id: " + newProductOption.getId());
+		LOG.info(resVm.getLogMessage());
+		return ResponseEntity.status(201).body(resVm);
+	}
 
-    List<ProductOptionResVm> productOptionResVmList =
-        productOptionPage.getContent().stream()
-            .map(ProductOptionResVm::fromModel)
-            .collect(Collectors.toList());
+	@Override
+	public ResponseEntity<PagingResVm<ProductOptionResVm>> getAllOption(int page) {
+		LOG.info("Receive request to get all option");
+		String creator = SecurityContextHolder.getContext().getAuthentication().getName();
+		Pageable pageable = PageRequest.of(page - 1, Constant.NUM_PER_CALL, Sort.by(Direction.DESC, "lastUpdate"));
+		Page<ProductOption> productOptionPage = this.iProductOptionRepository.findByCreatorWithPagination(creator,
+				pageable);
 
-    PagingResVm<ProductOptionResVm> listProductOptionResVm =
-        new PagingResVm<>(
-            productOptionResVmList,
-            productOptionPage.getTotalPages(),
-            (int) productOptionPage.getTotalElements());
+		List<ProductOptionResVm> productOptionResVmList = productOptionPage.getContent()
+			.stream()
+			.map(ProductOptionResVm::fromModel)
+			.collect(Collectors.toList());
 
-    return ResponseEntity.ok(listProductOptionResVm);
-  }
+		PagingResVm<ProductOptionResVm> listProductOptionResVm = new PagingResVm<>(productOptionResVmList,
+				productOptionPage.getTotalPages(), (int) productOptionPage.getTotalElements());
 
-  public ProductOption getOptionById(String id) {
-    return this.iProductOptionRepository
-        .findById(id)
-        .orElseThrow(
-            () -> new EntityNotFoundException("Option with id %s not found".formatted(id)));
-  }
+		return ResponseEntity.ok(listProductOptionResVm);
+	}
 
-  @Override
-  public ResponseEntity<ResVm> updateOption(String optionId, ProductOptionCreateReqVm req) {
-    LOG.info(String.format("Receive request to update option with id: %s", optionId));
+	public ProductOption getOptionById(String id) {
+		return this.iProductOptionRepository.findById(id)
+			.orElseThrow(() -> new EntityNotFoundException("Option with id %s not found".formatted(id)));
+	}
 
-    ProductOption old = getOptionById(optionId);
-    ProductOption newOption = req.updateModel(old);
-    this.iProductOptionRepository.save(newOption);
+	@Override
+	public ResponseEntity<ResVm> updateOption(String optionId, ProductOptionCreateReqVm req) {
+		LOG.info(String.format("Receive request to update option with id: %s", optionId));
 
-    ResVm resVm =
-        new ResVm(HttpStatus.OK, "Update option %s successfully".formatted(newOption.getName()));
-    LOG.info(resVm.getLogMessage());
-    return ResponseEntity.ok(resVm);
-  }
+		ProductOption old = getOptionById(optionId);
+		ProductOption newOption = req.updateModel(old);
+		this.iProductOptionRepository.save(newOption);
 
-  @Override
-  public ResponseEntity<ResVm> deleteOption(String optionId) {
-    LOG.info(String.format("Receive request to delete option with id: %s", optionId));
-    ProductOption productOption = getOptionById(optionId);
-    if (!productOption.getProductOptionValueList().isEmpty()) {
-      throw new BadRequestException("This option still in use. Please try again");
-    }
+		ResVm resVm = new ResVm(HttpStatus.OK, "Update option %s successfully".formatted(newOption.getName()));
+		LOG.info(resVm.getLogMessage());
+		return ResponseEntity.ok(resVm);
+	}
 
-    this.iProductOptionRepository.delete(productOption);
-    ResVm resVm =
-        new ResVm(
-            HttpStatus.OK, "Delete option %s successfully".formatted(productOption.getName()));
-    LOG.info(resVm.getLogMessage());
-    return ResponseEntity.ok(resVm);
-  }
+	@Override
+	public ResponseEntity<ResVm> deleteOption(String optionId) {
+		LOG.info(String.format("Receive request to delete option with id: %s", optionId));
+		ProductOption productOption = getOptionById(optionId);
+		if (!productOption.getProductOptionValueList().isEmpty()) {
+			throw new BadRequestException("This option still in use. Please try again");
+		}
 
-  @Override
-  public ResponseEntity<List<CommonProductResVm>> getAllOption() {
-    LOG.info("Receive request to get all option");
-    String creator = CommonService.getUser();
+		this.iProductOptionRepository.delete(productOption);
+		ResVm resVm = new ResVm(HttpStatus.OK, "Delete option %s successfully".formatted(productOption.getName()));
+		LOG.info(resVm.getLogMessage());
+		return ResponseEntity.ok(resVm);
+	}
 
-    List<ProductOption> productOptions = this.iProductOptionRepository.findByCreateBy(creator);
-    List<CommonProductResVm> commonProductResVms = new ArrayList<>();
-    for (ProductOption option : productOptions) {
-      commonProductResVms.add(new CommonProductResVm(option.getId(), option.getName()));
-    }
-    return ResponseEntity.ok(commonProductResVms);
-  }
+	@Override
+	public ResponseEntity<List<CommonProductResVm>> getAllOption() {
+		LOG.info("Receive request to get all option");
+		String creator = CommonService.getUser();
+
+		List<ProductOption> productOptions = this.iProductOptionRepository.findByCreateBy(creator);
+		List<CommonProductResVm> commonProductResVms = new ArrayList<>();
+		for (ProductOption option : productOptions) {
+			commonProductResVms.add(new CommonProductResVm(option.getId(), option.getName()));
+		}
+		return ResponseEntity.ok(commonProductResVms);
+	}
+
 }
